feat: store拆分module & 数据管理-folder tree

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
     "src/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx"
-, "type.d.ts"  ],
+, "type.d.ts", "src/store/module/project.js"  ],
   "exclude": [
     "node_modules"
   ]
