--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^1.1.4",
     "@types/axios": "^0.14.0",
+    "@types/nanoid": "^3.0.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.1.8",
     "vue": "^3.2.13",
